style(waybar): bring back full length bar aestetic

--- a/home/.config/waybar/style.css
+++ b/home/.config/waybar/style.css
@@ -16,6 +16,11 @@ window#waybar {
   background: transparent;
 }
 
+window#waybar > box {
+  background-color: @surface;
+  border-radius: 10px;
+}
+
 window#waybar.hidden {
   opacity: 0.2;
 }
