style(waybar): drop tranparency, set back to base

--- a/home/.config/waybar/style.css
+++ b/home/.config/waybar/style.css
@@ -17,7 +17,7 @@ window#waybar {
 }
 
 window#waybar > box {
-  background-color: alpha(@surface, 0.8);
+  background-color: @base;
   border-radius: 10px;
 }
 
