style(waybar): tweak to match niri and smaller screens

--- a/home/.config/waybar/style.css
+++ b/home/.config/waybar/style.css
@@ -18,7 +18,7 @@ window#waybar {
 
 window#waybar > box {
   background-color: @base;
-  border-radius: 10px;
+  border-radius: 12px;
 }
 
 window#waybar.hidden {
@@ -26,7 +26,7 @@ window#waybar.hidden {
 }
 
 tooltip {
-  font-size: 14px;
+  font-size: 16px;
   color: @text;
   background-color: @surface;
   opacity: 0.8;
@@ -42,7 +42,7 @@ tooltip {
 .modules-left > widget > *,
 .modules-center > widget > *,
 .modules-right > widget > * {
-  padding: 1px 5px 2px; /* top | left and right | bottom */
+  padding: 0px 5px 1px; /* top | left and right | bottom */
   border: 1px solid @highlightHigh;
   background-color: @surface;
 }
@@ -110,6 +110,7 @@ button {
 #wireplumber.source { color: @iris; }
 #backlight { color: @love; }
 #custom-recording { color: @love; }
+/* fix height spacing for nerdfonts w/o text */
 #power-profiles-daemon {
   color: @foam;
   padding-top: 2px;
